--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,6 @@ body {
 .login-div {
     border: 2px solid black;
     padding: 20px;
-    border-radius: 5px;
     background-color: rgb(9, 2, 33);
     width: 300px;
     text-align: center;
@@ -163,4 +162,52 @@ body {
 
 .errore{
     color: red;
+}
+
+.benvenuto-div{
+    text-align: center;
+    width: 90%;
+    border: 2px solid black;
+    border-radius: 6%;
+    padding: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgb(9, 2, 33);
+    color: rgb(255, 203, 125);
+    cursor: pointer;
+}
+
+.benvenuto-div a {
+    color: rgb(3, 3, 200);
+    text-decoration: none;
+}
+
+.benvenuto-div button{
+    width: 40%;
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: rgb(21, 34, 80);
+    color: rgb(255, 203, 125);
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.benvenuto-div button:hover {
+    background-color: rgb(10, 36, 120);
+}
+.benvenuto-div a {
+    color: rgb(3, 3, 200);
+    text-decoration: none;
+}
+
+.benvenuto-div select{
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 4px;
+    background-color: rgb(13, 25, 66);
+    color: white;
 }
