--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ body {
     text-align: center;
     border-radius: 6%;
     margin-bottom: 100px;
+    color: rgb(255, 203, 125);
 }
 .reg-div h1{
     margin-bottom: 20px;
@@ -121,16 +122,17 @@ body {
     text-decoration: none;
 }
 
-
 .social-table {
-    position: fixed; /* Posizionato in fondo alla pagina */
-    bottom: 0;
+    position: fixed;  /* mette il footer sempre in basso */
+    bottom: 0;  /* lo posiziona nella parte inferiore della pagina */
+    left: 0;
     width: 100%;
-    height: 150px;
     background-color: #00000044;
     backdrop-filter: blur(8px);
-    padding: 10px 0;
-    z-index: 10; /*sopra l'immagine di sfondo */
+    color: white;
+    padding: 15px 0;
+    text-align: center;
+    z-index: 1000;
 }
 
 .social-table a {
